# Aura-Rift

./: .gitignore  README.md  about.md  announcement.md  pyproject.toml  要求.md
src/aura_rift/: __init__.py  __main__.py  app.py  config.py  i18n.py  theme.py
src/aura_rift/services/: __init__.py  comfy.py  environment.py  files.py  git_service.py  registry.py  tasks.py
src/aura_rift/ui/: icons.py  main_window.py
